<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity"
    android:background="@drawable/background_login">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="201dp"
        tools:layout_editor_absoluteY="362dp">

        <RelativeLayout
            android:id="@+id/home_title_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/home_welcome_text"
                android:layout_width="291dp"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginStart="23dp"
                android:layout_marginLeft="23dp"
                android:layout_marginTop="29dp"
                android:layout_marginEnd="97dp"
                android:layout_marginRight="97dp"
                android:layout_marginBottom="10dp"
                android:text="@string/welcome_please_choose_an_activity"
                android:textSize="30sp"
                android:textStyle="bold" />

            <androidx.gridlayout.widget.GridLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/home_welcome_text">

                <androidx.cardview.widget.CardView
                    android:id="@+id/moodLogCardView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    app:cardBackgroundColor="#71B6F4"
                    app:cardCornerRadius="8dp"
                    app:cardElevation="8dp"
                    app:layout_column="0"
                    app:layout_columnWeight="1"
                    app:layout_gravity="fill"
                    app:layout_row="0"
                    app:layout_rowWeight="1">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_vertical|center_horizontal"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/imageView2"
                            android:layout_width="57dp"
                            android:layout_height="56dp"
                            app:srcCompat="@drawable/baseline_mood_white_24dp" />

                        <TextView
                            android:id="@+id/textView3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="9dp"
                            android:gravity="center_horizontal"
                            android:text="@string/mood_log"
                            android:textAlignment="center"
                            android:textColor="@color/white"
                            android:textSize="18sp"
                            android:textStyle="bold" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/worksheetsCardView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    app:cardBackgroundColor="#FAC761"
                    app:cardCornerRadius="8dp"
                    app:cardElevation="8dp"
                    app:layout_column="1"
                    app:layout_columnWeight="1"
                    app:layout_gravity="fill"
                    app:layout_row="0"
                    app:layout_rowWeight="1">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_vertical|center_horizontal"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/imageView3"
                            android:layout_width="57dp"
                            android:layout_height="56dp"
                            app:srcCompat="@drawable/baseline_edit_white_24dp" />

                        <TextView
                            android:id="@+id/textView4"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="9dp"
                            android:gravity="center_horizontal"
                            android:text="@string/worksheets"
                            android:textAlignment="center"
                            android:textColor="@color/white"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/statisticsCardView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    app:cardBackgroundColor="#CF96F3"
                    app:cardCornerRadius="8dp"
                    app:cardElevation="8dp"
                    app:layout_column="0"
                    app:layout_columnWeight="1"
                    app:layout_gravity="fill"
                    app:layout_row="1"
                    app:layout_rowWeight="1">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_vertical|center_horizontal"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/imageView4"
                            android:layout_width="57dp"
                            android:layout_height="56dp"
                            app:srcCompat="@drawable/baseline_auto_graph_white_24dp" />

                        <TextView
                            android:id="@+id/textView5"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="9dp"
                            android:gravity="center_horizontal"
                            android:text="@string/statistics"
                            android:textAlignment="center"
                            android:textColor="@color/white"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/contactCardView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    app:cardBackgroundColor="#96DA6B"
                    app:cardCornerRadius="8dp"
                    app:cardElevation="8dp"
                    app:layout_column="1"
                    app:layout_columnWeight="1"
                    app:layout_gravity="fill"
                    app:layout_row="1"
                    app:layout_rowWeight="1">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_vertical|center_horizontal"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/imageView5"
                            android:layout_width="57dp"
                            android:layout_height="56dp"
                            app:srcCompat="@drawable/baseline_mail_white_24dp" />

                        <TextView
                            android:id="@+id/textView6"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="9dp"
                            android:gravity="center_horizontal"
                            android:text="@string/contact"
                            android:textAlignment="center"
                            android:textColor="@color/white"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                    </LinearLayout>
                </androidx.cardview.widget.CardView>

            </androidx.gridlayout.widget.GridLayout>

        </RelativeLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>