<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StatisticsActivity"
    android:background="@drawable/background_login">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="201dp"
        tools:layout_editor_absoluteY="362dp">

        <RelativeLayout
            android:id="@+id/statistics_title_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/select_statistics"
                android:layout_width="wrap_content"
                android:layout_height="76dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginStart="23dp"
                android:layout_marginLeft="23dp"
                android:layout_marginTop="18dp"
                android:layout_marginEnd="206dp"
                android:layout_marginRight="206dp"
                android:layout_marginBottom="10dp"
                android:text="Select statistics"
                android:textSize="30sp"
                android:textStyle="bold" />

            <androidx.gridlayout.widget.GridLayout
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_above="@id/statisticsSelectorGrid"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginStart="-130dp"
                android:layout_marginLeft="-130dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="52dp"
                android:layout_marginRight="52dp"
                android:layout_marginBottom="-6dp"
                android:layout_toEndOf="@+id/select_statistics"
                android:layout_toRightOf="@+id/select_statistics">

                <androidx.cardview.widget.CardView
                    android:id="@+id/hotstreakCardView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    app:cardBackgroundColor="#FF6130"
                    app:cardCornerRadius="8dp"
                    app:cardElevation="8dp"
                    app:layout_column="0"
                    app:layout_columnWeight="1"
                    app:layout_gravity="fill"
                    app:layout_row="0"
                    app:layout_rowWeight="1">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_vertical|center_horizontal"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/imageView6"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="3dp"
                            app:srcCompat="@drawable/outline_local_fire_department_white_24dp" />

                        <TextView
                            android:id="@+id/hotStreakCounter"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="0dp"
                            android:layout_marginBottom="3dp"
                            android:gravity="center_horizontal"
                            android:text="@string/_2"
                            android:textAlignment="center"
                            android:textColor="@color/white"
                            android:textSize="18sp"
                            android:textStyle="bold" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

            </androidx.gridlayout.widget.GridLayout>

            <androidx.gridlayout.widget.GridLayout
                android:id="@+id/statisticsSelectorGrid"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/select_statistics">

                <androidx.cardview.widget.CardView
                    android:id="@+id/thoughtRecordCardView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    app:cardBackgroundColor="#71B6F4"
                    app:cardCornerRadius="8dp"
                    app:cardElevation="8dp"
                    app:layout_column="0"
                    app:layout_columnWeight="1"
                    app:layout_gravity="fill"
                    app:layout_row="0"
                    app:layout_rowWeight="1"
                    android:onClick="thoughtRecordStatisticsButtonAction">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_vertical|center_horizontal"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/imageView2"
                            android:layout_width="57dp"
                            android:layout_height="56dp"
                            app:srcCompat="@drawable/outline_psychology_white_24dp" />

                        <TextView
                            android:id="@+id/textView3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="9dp"
                            android:gravity="center_horizontal"
                            android:text="@string/thought_record"
                            android:textAlignment="center"
                            android:textColor="@color/white"
                            android:textSize="30sp"
                            android:textStyle="bold" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/gradedExposureCardView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:onClick="thoughtRecordStatisticsButtonAction"
                    app:cardBackgroundColor="#499DDD"
                    app:cardCornerRadius="8dp"
                    app:cardElevation="8dp"
                    app:layout_column="0"
                    app:layout_columnWeight="1"
                    app:layout_gravity="fill"
                    app:layout_row="1"
                    app:layout_rowWeight="1">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_vertical|center_horizontal"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/imageView3"
                            android:layout_width="57dp"
                            android:layout_height="56dp"
                            app:srcCompat="@drawable/outline_filter_list_white_24dp" />

                        <TextView
                            android:id="@+id/textView4"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="9dp"
                            android:gravity="center_horizontal"
                            android:text="@string/graded_exposure"
                            android:textAlignment="center"
                            android:textColor="@color/white"
                            android:textSize="30sp"
                            android:textStyle="bold" />

                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/fearDiaryCardView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    app:cardBackgroundColor="#3984C5"
                    app:cardCornerRadius="8dp"
                    app:cardElevation="8dp"
                    app:layout_column="0"
                    app:layout_columnWeight="1"
                    app:layout_gravity="fill"
                    app:layout_row="2"
                    app:layout_rowWeight="1">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_vertical|center_horizontal"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/imageView4"
                            android:layout_width="57dp"
                            android:layout_height="56dp"
                            app:srcCompat="@drawable/outline_menu_book_white_24dp" />

                        <TextView
                            android:id="@+id/textView5"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="9dp"
                            android:gravity="center_horizontal"
                            android:text="@string/fear_diary"
                            android:textAlignment="center"
                            android:textColor="@color/white"
                            android:textSize="30sp"
                            android:textStyle="bold" />

                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/situationalAnalysisCardView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    app:cardBackgroundColor="#246291"
                    app:cardCornerRadius="8dp"
                    app:cardElevation="8dp"
                    app:layout_column="0"
                    app:layout_columnWeight="1"
                    app:layout_gravity="fill"
                    app:layout_row="3"
                    app:layout_rowWeight="1">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_vertical|center_horizontal"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/imageView5"
                            android:layout_width="57dp"
                            android:layout_height="56dp"
                            app:srcCompat="@drawable/outline_search_white_24dp" />

                        <TextView
                            android:id="@+id/textView6"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="9dp"
                            android:gravity="center_horizontal"
                            android:text="@string/situational_analysis"
                            android:textAlignment="center"
                            android:textColor="@color/white"
                            android:textSize="30sp"
                            android:textStyle="bold" />

                    </LinearLayout>
                </androidx.cardview.widget.CardView>

            </androidx.gridlayout.widget.GridLayout>

        </RelativeLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>